# blowbox-2017

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
cmake/modules/: FindD3D12.cmake
doc/html/: adapter_8h_source.html  algorithm_8h_source.html  annotated.html  assert_8h_source.html  binary__file_8h_source.html  blowbox__config_8h_source.html  blowbox__core_8h_source.html  byte__address__buffer_8h_source.html  camera_8h_source.html  chrono_8h_source.html  classblowbox_1_1_binary_file-members.html  classblowbox_1_1_binary_file.html  classblowbox_1_1_blowbox_core-members.html  classblowbox_1_1_blowbox_core.html  classblowbox_1_1_byte_address_buffer-members.html  classblowbox_1_1_byte_address_buffer.html  classblowbox_1_1_camera-members.html  classblowbox_1_1_camera.html  classblowbox_1_1_color_buffer-members.html  classblowbox_1_1_color_buffer.html  classblowbox_1_1_command_allocator_pool-members.html  classblowbox_1_1_command_allocator_pool.html  classblowbox_1_1_command_context-members.html  classblowbox_1_1_command_context.html  classblowbox_1_1_command_context_manager-members.html  classblowbox_1_1_command_context_manager.html  classblowbox_1_1_command_manager-members.html  classblowbox_1_1_command_manager.html  classblowbox_1_1_command_queue-members.html  classblowbox_1_1_command_queue.html  classblowbox_1_1_compute_p_s_o-members.html  classblowbox_1_1_compute_p_s_o.html  classblowbox_1_1_console-members.html  classblowbox_1_1_console.html  classblowbox_1_1_debug_menu-members.html  classblowbox_1_1_debug_menu.html  classblowbox_1_1_debug_window-members.html  classblowbox_1_1_debug_window.html  classblowbox_1_1_deferred_renderer-members.html  classblowbox_1_1_deferred_renderer.html  (+352 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  (+63 more)
doxygen/: config  doxygen_log_file.txt  generate.bat
examples/: README.md
models/crytek-sponza/: sponza.mtl  sponza2.mtl
models/holodeck/: holodeck.mtl
models/living-room/: living_room.mtl
models/nanosuit/: nanosuit.mtl
shaders/: pixel.hlsl  vertex.hlsl
src/content/: binary_file.cc  binary_file.h  content.cc  content.h  file_manager.cc  file_manager.h  image.cc  image.h  image_manager.cc  image_manager.h  model_factory.cc  model_factory.h  text_file.cc  text_file.h
src/content/stb/: stb_image.h
src/core/: blowbox_config.cc  blowbox_config.h  blowbox_core.cc  blowbox_core.h  eastl.h  eastl_required.cc  eastl_required.h  entity.cc  entity.h  entity_factory.cc  entity_factory.h  get.cc  get.h  main.cc  scene_manager.cc  scene_manager.h
src/core/core/: blowbox_config.cc  blowbox_config.h  blowbox_core.cc  blowbox_core.h
src/core/debug/: console.cc  console.h  debug_menu.cc  debug_menu.h  debug_window.cc  debug_window.h  entity_viewer.cc  entity_viewer.h  frame_stats.cc  frame_stats.h  material_list.cc  material_list.h  material_viewer.cc  material_viewer.h  memory_profiler.cc  memory_profiler.h  memory_stats.cc  memory_stats.h  performance_profiler.cc  performance_profiler.h  profiler.cc  profiler.h  scene_viewer.cc  scene_viewer.h  texture_viewer.cc  texture_viewer.h
src/core/scene/: entity.cc  entity.h  entity_factory.cc  entity_factory.h  scene_manager.cc  scene_manager.h
src/renderer/: adapter.cc  adapter.h  d3d12_includes.h  d3dx12.h  deferred_renderer.cc  deferred_renderer.h  descriptor_heap.cc  descriptor_heap.h  device.cc  device.h  forward_renderer.cc  forward_renderer.h  graphics.h  material.cc  material.h  material_manager.h  mesh.cc  mesh.h  mesh_data.cc  mesh_data.h  pipeline_state.cc  pipeline_state.h  renderer.cc  renderer.h  root_signature.cc  root_signature.h  shader.cc  shader.h  swap_chain.cc  swap_chain.h  texture.cc  texture.h  texture_manager.cc  texture_manager.h  vertex.h
src/renderer/buffers/: buffer_manager.cc  buffer_manager.h  byte_address_buffer.cc  byte_address_buffer.h  color_buffer.cc  color_buffer.h  depth_buffer.cc  depth_buffer.h  dynamic_upload_buffer.h  gpu_buffer.cc  gpu_buffer.h  gpu_resource.cc  gpu_resource.h  pixel_buffer.cc  pixel_buffer.h  structured_buffer.cc  structured_buffer.h  typed_buffer.cc  typed_buffer.h  upload_buffer.cc  upload_buffer.h
src/renderer/cameras/: camera.cc  camera.h  orthographic_camera.cc  orthographic_camera.h  perspective_camera.cc  perspective_camera.h
src/renderer/commands/: command_allocator_pool.cc  command_allocator_pool.h  command_context.cc  command_context.h  command_context_manager.cc  command_context_manager.h  command_manager.cc  command_manager.h  command_queue.cc  command_queue.h  compute_context.cc  compute_context.h  graphics_context.cc  graphics_context.h
src/renderer/dds/: dds_texture_loader.cc
src/renderer/imgui/: imgui.cc  imgui.h  imgui_impl_dx12.cc  imgui_internal.h  imgui_manager.cc  imgui_manager.h  main.cc
src/renderer/lights/: directional_light.cc  directional_light.h  point_light.cc  point_light.h  spot_light.cc  spot_light.h
src/renderer/materials/: material.cc  material.h  material_manager.cc  material_manager.h
src/renderer/meshes/: mesh.h  mesh_data.h  vertex.h
src/util/: algorithm.h  assert.h  chrono.h  delete.h  deque.h  eastl.cc  functional.h  intrusive_ptr.h  linked_ptr.h  map.h  numeric.h  numeric_limits.h  priority_queue.h  quaternion.h  queue.h  release.h  resolution.cc  resolution.h  ring_buffer.h  safe_ptr.h  scoped_ptr.h  shared_ptr.h  sort.h  stack.h  string.h  tuple.h  unique_ptr.h  unordered_map.h  utility.h  vector.h  weak_ptr.h
src/win32/: glfw_manager.cc  glfw_manager.h  key_code.cc  key_code.h  keyboard_state.cc  keyboard_state.h  mouse_button.cc  mouse_button.h  mouse_state.cc  mouse_state.h  time.cc  time.h  window.cc  window.h
(+4 files in other folders)
